Ändrade namn på projectet, Gjorde width på sidan mindre. Använder redirect istället. Struktuerade om lite i mapparna

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
 
 <h2 class="text-center">Välkommen till min lilla SR Radio API Project</h2>
 
-<table class="table">
+<table class="table container">
     <thead>
     <tr>
         <th scope="col">#</th>
