--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -6,15 +6,16 @@
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link th:href= "@{/css/main.css}"  rel="stylesheet">
+  <link th:href= "@{/main.css}"  rel="stylesheet">
 </head>
 <body>
 <header th:fragment="header">
-  <nav class="navbar navbar-expand-lg navbar-light bg-info p-2">
-    <a class="navbar-brand" href="/home">SR News</a>
+  <nav class="navbar nav  navbar-expand-lg navbar-light bg-info p-2">
 
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent ">
+
+    <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent ">
+      <a class="navbar-brand" href="/home">SR News</a>
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" >
           <a class="nav-link" href="/home">Home </a>
